test/Transforms/TypeVarInference/function_local_wildcard_call_fail.llzk
// RUN: llzk-opt -split-input-file -llzk-infer-tvar -verify-diagnostics %s

module attributes {llzk.lang} {
  poly.template @TFunctionLocalWildcardParamConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @f(%arg: !poly.tvar<@T>) -> index {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %index : index
    }

    function.def @g(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_f(%arg: !felt.type) -> index {
    // expected-error@+1 {{explicit template argument for inferred parameter @T must match inferred type 'index', but found '!felt.type'}}
    %0 = function.call @TFunctionLocalWildcardParamConflict::@f<[?]>(%arg) : (!felt.type) -> index
    function.return %0 : index
  }
}
